# windy-search

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  SUBSTRATE.md
.github/lint/: canonical-domains.json  lint-adr-046-compose-naming.sh  lint-canonical-domains.sh
.github/workflows/: adr-046-lint.yml  ci.yml  deploy.yml  (+1 more)
contracts/: README.md  ops.mcp.v1.json  weave.json
deploy-prod/: docker-compose.yml
service/: .coverage  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
service/app/: __init__.py  anthropic_client.py  config.py  dedup.py  eternitas_client.py  main.py  merge.py  mind_broker.py  normalization.py  ops_log.py  privacy.py  ranking.py  router.py  telemetry.py  types.py
service/app/auth/: dependencies.py  ept.py  jwks.py  revocation.py
service/app/eii/: cost_cap.py  rate_limit.py  result_cache.py  score_cache.py  tiers.py
service/app/routes/: admin_budget.py  ops.py  version.py
service/app/sources/: __init__.py  base.py  brave.py  google.py  stubs.py
service/app/v1/: __init__.py  search.py
service/app/web/: browserbase.py  extract.py  fetch.py  render_chain.py  router.py  search.py  windyhand.py
service/app/webhooks/: consumer.py
service/ops-hook/: README.md  hook.py
service/ops-hook/deploy/: Caddyfile.snippet  ops-hook.env.example  windy-search-ops-hook.service
service/tests/: auth_helpers.py  conftest.py  test_admin_budget.py  test_admin_telemetry.py  test_auth.py  test_cost_cap.py  test_dedup.py  test_eii_rate_limit.py  test_health.py  test_merge.py  test_normalization.py  test_ops.py  test_ops_hook_drift.py  test_privacy.py  test_ranking.py  test_render_chain.py  test_result_cache.py  test_revocation.py  test_router.py  test_router_fallback.py  test_sources_brave.py  test_sources_google.py  test_sources_stubs.py  test_telemetry.py  test_types.py  test_v1_search.py  test_version.py  test_web_extract.py  test_web_fetch.py  test_web_search.py  test_webhook_consumer.py  test_windyhand_backend.py  test_windyhand_metering.py
spec/: agent-search-protocol.md  openapi-v1.yaml
