[project]
name = "windy-search"
version = "0.1.0"
description = "Agent-credentialed web search for the Windy ecosystem — canonical V1 (Python + FastAPI) per ADR-013."
requires-python = ">=3.12"
authors = [{ name = "The Windstorm" }]
license = { text = "Proprietary" }
# Floors aligned with windy-mind/api/pyproject.toml for ecosystem coherence
# (ADR-013 marathon stack). The uv.lock file gives bit-for-bit reproducibility.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "redis[hiredis]>=5.1",
    "pyjwt[crypto]>=2.9",
    "cryptography>=43",  # explicit (pyjwt[crypto] also pulls it)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
